--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@expo-google-fonts/space-mono": "^0.2.3",
     "@types/react": "~18.0.27",
+    "axios": "^1.4.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
