--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/space-mono": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@tanstack/react-query": "^4.29.12",
     "@types/react": "~18.0.27",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
@@ -25,8 +27,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.9.4",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
