chore: modifying app.json and eas.json.

--- a/app.json
+++ b/app.json
@@ -6,10 +6,21 @@
     },
     "name": "github-profile",
     "slug": "github-profile",
-    "extra": {
-      "eas": {
-        "projectId": "cfdf9f63-cb11-4f23-a788-9b7a64a8bbdf"
-      }
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": [
+        "expo.ts",
+        "expo.tsx",
+        "expo.js",
+        "expo.jsx",
+        "ts",
+        "tsx",
+        "js",
+        "jsx",
+        "json",
+        "wasm",
+        "svg"
+      ]
     },
     "android": {
       "package": "com.github.profile"
