--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.7",
     "react-query": "^3.39.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-system-ui": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
