chore: hiding the navigation bar and statusBar.

--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
+    "androidNavigationBar": {
+      "visible": "immersive"
+    },
     "scheme": "acme",
     "userInterfaceStyle": "automatic",
     "web": {
